first section complect

--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
 </head>
 
 <body>
+    <section>
+        <div class="haif-with">
+            <div class="title-section">
+                <h1>Stay Focused on</h1>
+                <h1><span>Misssion 2022</span></h1>
+            </div>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, labore esse! Facilis cum alias
+                quidem ullam omnis harum culpa consequuntur?</p>
+            <a class="button" href="#">Resume Me</a>
+            <p>lare more detals</p>
+
+        </div>
+        <div class="image-section haif-with">
+            <img class="max-img" src="./images/person/person-5.png" alt="person">
+        </div>
+    </section>
 
 </body>
 
