--- a/index.html
+++ b/index.html
@@ -6,27 +6,125 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assainment</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <section>
+    <div class="first-section">
         <div class="haif-with">
             <div class="title-section">
-                <h1>Stay Focused on</h1>
-                <h1><span>Misssion 2022</span></h1>
+                <h1>My Web Development</h1>
+                <h1><span>Misssion in 2022</span></h1>
             </div>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, labore esse! Facilis cum alias
-                quidem ullam omnis harum culpa consequuntur?</p>
-            <a class="button" href="#">Resume Me</a>
-            <p>lare more detals</p>
+            <p>Hi, My Name Is Juboraj Islam Mamun. My Mession This Year is to Be a good web developer. This Is Why I Am
+                Learning Progrraming..</p>
+            <a class="button" href="#">Read More</a>
+            <p>Scrool down to explore more about us</p>
 
         </div>
         <div class="image-section haif-with">
             <img class="max-img" src="./images/person/person-5.png" alt="person">
         </div>
+    </div>
+
+
+    <div class="segend-section">
+        <h2>My Mission in 2022</h2>
+        <div class="section">
+            <div class="mission left">
+                <img class="img-icon" src="./images/illustrators/illustrator-1.png" alt="">
+                <h3>Mission</h3>
+                <p>My mession is to be a good web developer. This is why i am learning web development. I hope i will
+                    succeed if leran web development with my maximum effort hard work.</p>
+            </div>
+            <div class="vission left">
+                <img class="img-icon" src="./images/illustrators/illustrator-2.png" alt="">
+
+                <h3>Vission</h3>
+                <p>I'm Learning programming. vission is web development. Becuase if i learn better, I can be a better
+                    programmer.</p>
+
+
+            </div>
+            <div class="goals left">
+                <img class="img-icon" src="./images/illustrators/illustrator-3.png" alt="">
+                <h3>Goails</h3>
+                <p>Everyone has a goal in life. people cannot go without goals. My life and goal is web developer. If
+                    you stay with Allah, You will succeed.</p>
+            </div>
+        </div>
+
+
+
+
+    </div>
+    <div class="thered-section">
+        <div class="img-section haif-with">
+            <img class="max-img" src="./images/pictures/coding.png" alt="">
+        </div>
+        <div class="developeer-section haif-with">
+            <h1>My Dream Web Development</h1>
+            <p>Everyone has dreams in human life.I have. Dreams teach people to live. Teaches to move. My dream is
+                little different. My dream is to be a small web developer. Introduce yourself thourgh this work.</p>
+            <a class="button" href="#">Dowenlode Cv</a>
+        </div>
+
+    </div>
+
+
+    <div class="forth-section">
+        <div class="global-section haif-with">
+            <h1>My Work Experience</h1>
+            <p>I have very little work experience. Because i'm listening to programming right now. I am doing small
+                project while listening to reading. I am praticing side by side programming language on my computer. In
+                the meantime ihave learned html, css, javaspict.</p>
+            <a class="button" href="#">Read More</a>
+        </div>
+        <div class="img-section1 haif-with">
+            <img class="max-img" src="./images/pictures/project.png" alt="">
+        </div>
+    </div>
+    <section class="countact-section">
+        <div class="contact-info haif-with">
+            <h2>Contact Address</h2>
+            <div><i class="fas fa-map-marker-alt"></i>
+                East Madarbari,Ice factory road
+            </div>
+            <div><i class="fas fa-map-marker-alt"></i>
+                Chittagong,Bangladesh
+            </div>
+            <i class="fas fa-envelope"></i> Juboraj22gmail.com
+            <div>
+                <div>
+                    <i class="fas fa-phone"></i> 01860700702
+                </div>
+
+            </div>
+        </div>
+        <div class="contact-us haif-with">
+            <h2>Contact us</h2>
+            <form action="#">
+                <input type="text" placeholder="Your Name"> <br>
+                <input type="text" placeholder="Your Email"> <br>
+                <textarea name="" placeholder="Your Massage" id="text" cols="30" rows="10"></textarea> <br>
+                <button class="button">Send Massage</button>
+            </form>
+        </div>
+
+
+
+
+        </div>
     </section>
+    <footer>
+        <h2>Mission <span>2022</span></h2>
+        <p>hard work,Perseverance, And Determination for 2022</p>
+    </footer>
+
+
 
 </body>
 
