--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assainment</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital@1&family=Roboto+Slab&family=Work+Sans:ital,wght@0,200;0,300;0,500;0,600;0,800;0,900;1,200;1,500;1,600;1,800&display=swap"
+        rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
 </head>
@@ -63,7 +68,7 @@
     </div>
     <div class="thered-section">
         <div class="img-section haif-with">
-            <img class="max-img" src="./images/pictures/coding.png" alt="">
+            <img class="max-img" src="coding.png" alt="">
         </div>
         <div class="developeer-section haif-with">
             <h1>My Dream Web Development</h1>
