--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
     <div class="thered-section">
         <div class="img-section haif-with">
-            <img class="max-img" src="coding.png" alt="">
+            <img class="max-img" src="./images/pictures/coding.png" alt="">
         </div>
         <div class="developeer-section haif-with">
             <h1>My Dream Web Development</h1>
@@ -128,6 +128,16 @@
         <h2>Mission <span>2022</span></h2>
         <p>hard work,Perseverance, And Determination for 2022</p>
     </footer>
+    <section class="half-with">
+        <div class="half">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, nemo?</p>
+        </div>
+        <div class="image half">
+            <img src="./images/pictures/project.png" alt="">
+        </div>
+    </section>
+
+
 
 
 
