--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="half">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, nemo?</p>
         </div>
-        <div class="image half">
+        <div class="half">
             <img src="./images/pictures/project.png" alt="">
         </div>
     </section>
