--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
         <h2>My Mission in 2022</h2>
         <div class="section">
             <div class="mission left">
-                <img class="img-icon" src="./images/illustrators/illustrator-1.png" alt="">
+                <img class="img-icon" src="./images/illustrators/illustrator-1.png" alt="person">
                 <h3>Mission</h3>
                 <p>My mession is to be a good web developer. This is why i am learning web development. I hope i will
                     succeed if leran web development with my maximum effort hard work.</p>
             </div>
             <div class="vission left">
-                <img class="img-icon" src="./images/illustrators/illustrator-2.png" alt="">
+                <img class="img-icon" src="./images/illustrators/illustrator-2.png" alt="person">
 
                 <h3>Vission</h3>
                 <p>I'm Learning programming. vission is web development. Becuase if i learn better, I can be a better
@@ -55,7 +55,7 @@
 
             </div>
             <div class="goals left">
-                <img class="img-icon" src="./images/illustrators/illustrator-3.png" alt="">
+                <img class="img-icon" src="./images/illustrators/illustrator-3.png" alt="person">
                 <h3>Goails</h3>
                 <p>Everyone has a goal in life. people cannot go without goals. My life and goal is web developer. If
                     you stay with Allah, You will succeed.</p>
@@ -68,7 +68,7 @@
     </div>
     <div class="thered-section">
         <div class="img-section haif-with">
-            <img class="max-img" src="./images/pictures/coding.png" alt="">
+            <img class="max-img" src="./images/pictures/coding.png" alt="person">
         </div>
         <div class="developeer-section haif-with">
             <h1>My Dream Web Development</h1>
@@ -81,7 +81,7 @@
 
 
     <div class="forth-section">
-        <div class="global-section haif-with">
+        <div class="experance haif-with">
             <h1>My Work Experience</h1>
             <p>I have very little work experience. Because i'm listening to programming right now. I am doing small
                 project while listening to reading. I am praticing side by side programming language on my computer. In
@@ -89,7 +89,10 @@
             <a class="button" href="#">Read More</a>
         </div>
         <div class="img-section1 haif-with">
-            <img class="max-img" src="./images/pictures/project.png" alt="">
+            <div class="bangldesh">
+                <img class="max-img" src="./images/pictures/project.png" alt="">
+            </div>
+
         </div>
     </div>
     <section class="countact-section">
