--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <a class="button" href="#">Read More</a>
         </div>
         <div class="img-section1 haif-with">
-            <div class="bangldesh">
+            <div class="picture">
                 <img class="max-img" src="./images/pictures/project.png" alt="">
             </div>
 
